--- a/AirMonitor/Info.plist
+++ b/AirMonitor/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>$(PRODUCT_NAME)</string>
+	<string>新风监测系统</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -36,7 +36,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>2</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -47,15 +47,15 @@
 	<key>NSCalendarsUsageDescription</key>
 	<string>程序将使用您的日历信息</string>
 	<key>NSCameraUsageDescription</key>
-	<string> </string>
+	<string>若不允许，APP将无法正常使用相机功能</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>程序将使用您的位置信息</string>
+	<string>若不允许，APP将无法正常获取您的位置信息</string>
 	<key>NSLocationUsageDescription</key>
 	<true/>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<true/>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string> </string>
+	<string>若不允许，APP将无法正常使用图片功能</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
